# Working-tools

./: .gitignore  CREARE-OCI.ovpn  Find-Replace.py  Get_customer_child_id.py  Json_type.py  README.md  agrupar_similariedade.py  compara_scripts.py  comparar_2_arquivos.py  criar_txt_apartir_json.py  functions.py  jenkinsfile  pyproject.toml  remover_arquivos.sh  setup_vpn.sh
Python_tools/: BLE_scan.py  Find-Replace.py  Get_customer_child_id.py  Json_type.py  add_space_in_first_line.py  agrupar_similariedade.py  bitmap.py  compara_scripts.py  compara_tps.py  comparar_2_arquivos.py  configs_scripts_copiloto.py  copilot_functions.py  criar_txt_apartir_json.py  encrypter.py  functions.py  inserir_dados.py  test_aero.py  verifica_suts.py
Shell_tools/: copiar_arquivos.sh  copiar_arquivos_recusivamente.sh  remover_arquivos.ps1  remover_arquivos.sh  teste_banco_dev.sh
